Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -80,3 +80,10 @@ url={https://doi.org/10.1007/BF00702605}
     year = {2019},
     publisher = {William Andrew}
 }
+
+@misc{WalkingTheBeamThorlabs,
+  title = {Walking The Beam Thorlabs},
+  howpublished = {\url{https://www.thorlabs.com/newgrouppage9.cfm?objectgroup_id=14221}},
+  note = {Accessed: 2023-03-28}
+}
+
