Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -87,3 +87,9 @@ url={https://doi.org/10.1007/BF00702605}
   note = {Accessed: 2023-03-28}
 }
 
+@misc{KnifeEdgeMeasurement,
+  title = {Measurements of Laser Beam Using Knife Edge Technique},
+  howpublished = {\url{https://www.politesi.polimi.it/bitstream/10589/167367/1/la\%20tesina\%20revised-converted.pdf}},
+  note = {Accessed: 2023-03-28}
+}
+
